2003-07-09  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mktmpl.in (ParseStructDeclaration): 
	* gtkdoc-mkdb.in (ParseStructDeclaration): Accept volatile struct members, which have just
	made their appearance in glib.

2003-06-29  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (ExpandAbbreviations): When expanding @param, catch the common @param->field
	and @param.field, to reduce the need for littering the C sources with <literal>foo->bar</literal>.

2003-06-25  Matthias Clasen  <maclas@gmx.de>

	Changes for #115528:
	
	* gtkdoc-mkdb.in (OutputSGML): Collect hierarchy, interfaces, implementations, prerequisites
	and derived interfaces separately.
	(OutputSGMLFile): Take two more arguments: implementations and derived interfaces.
	(GetHierarchy): Also put immediate children in the local tree.
	(GetInterfaces): Split into GetInterfaces and GetImplementations.
	(GetImplementations): New function to get the implementations of an interface.
	(GetDerived): New function to get the known derived interfaces of an interface.

	* gtkdoc-mkdb.in (MakeXRef): Accept a second, optional parameter for the
	text of the link.
	(ExpandAbbreviations): Add semantic markup inside the links, so that 
	non-crossreferenced symbols come out properly formatted after link
	removal.  (#61345)

2003-06-15  Matthias Clasen  <maclas@gmx.de>

	Support for a flat index of all symbols.  (#92861)
	To use, put an empty <index/> element in your driver document. 
	
	* gtkdoc-mkdb.in (MakeIndexterms): New function, emits an indexterm.
	(OutputMacro, OutputTypedef, OutputStruct, OutputEnum,
	OutputUnion, OutputVariable, OutputFunction): Use MakeIndexterms.
	to emit indexterms for symbols. 
	
	* gtkdoc-mkdb.in (GetSignals): 
	(GetArgs): Emit Since: information for signals and properties.

Thu Jun 12 15:55:57 2003  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-mkhtml.in (declaration): Replace head -1 with -n 1.
	(Merge change by Elliot Lee from Red Hat package)
